# LearnC

./: AccessingPointers.c  Arrays.c  BitwiseOperators.c  CMakeLists.txt  CastAndsizeof.c  Challenge1.c  Challenge2.c  Challenge3.c  Challenge4.c  Challenge5.c  Challenge6.c  ConstantStrings.c  DefiningPointers.c  DefiningStrings.c  ForLoops.c  FunctionsBasics.c  IfStatements.c  LocalAndGlobalVariables.c  MultidimensionalArrays.c  OperatorPrecedence.c  README.md  SearchingStrings.c  StringFunctions.c  SwitchStatements.c  UsingPointers.c  WhileLoops.c  hello.c
Arrays/: MultidimensionalArrays.c
Challenges/: Challenge1.c  Challenge10.c  Challenge11.c  Challenge12.c  Challenge13.c  Challenge14.c  Challenge2.c  Challenge3.c  Challenge4.c  Challenge5.c  Challenge7.c  Challenge8.c  Challenge9.c
ControlFlow/: SwitchStatements.c
FileIO/: AccessingFiles.c  FilePositioning.c  ReadingFiles.c  WritingToFiles.c
Functions/: LocalAndGlobalVariables.c
Pointers/: AccessingPointers.c  DefiningPointers.c  DynamicMemoryAllocation.c  PassByReference.c  PointerArithmetic.c  PointersAndArrays.c  PointersAndStrings.c  UsingPointers.c  VoidPointers.c
Strings/: ConstantStrings.c  SearchingStrings.c  StringFunctions.c
Structs/: CreatingStructs.c  NestedStructures.c  StructsAndArrays.c  StructsAndFunctions.c  StructsAndPointers.c
