cmake_minimum_required(VERSION 3.21)
project(LearnCv2 C)

set(CMAKE_C_STANDARD 99)

add_executable(LearnCv2 BitwiseOperators.c CastAndsizeof.c OperatorPrecedence.c Challenge1.c Challenge2.c IfStatements.c SwitchStatements.c Challenge3.c ForLoops.c WhileLoops.c Challenge4.c Arrays.c MultidimensionalArrays.c VariableLengthArrays.c)
